--- a/references.bib
+++ b/references.bib
@@ -126,3 +126,31 @@
 	url = {http://dx.doi.org/10.1038/nature01262},
 	langid = {en}
 }
+
+@article{rentzsch2021,
+	title = {CADD-Splice{\textemdash}improving genome-wide variant effect prediction using deep learning-derived splice scores},
+	author = {Rentzsch, Philipp and Schubach, Max and Shendure, Jay and Kircher, Martin},
+	year = {2021},
+	month = {02},
+	date = {2021-02-22},
+	journal = {Genome Medicine},
+	volume = {13},
+	number = {1},
+	doi = {10.1186/s13073-021-00835-9},
+	url = {http://dx.doi.org/10.1186/s13073-021-00835-9},
+	langid = {en}
+}
+
+@article{sullivan2023,
+	title = {Leveraging base-pair mammalian constraint to understand genetic variation and human disease},
+	author = {Sullivan, Patrick F. and Meadows, Jennifer R. S. and Gazal, Steven and Phan, BaDoi N. and Li, Xue and Genereux, Diane P. and Dong, Michael X. and Bianchi, Matteo and Andrews, Gregory and Sakthikumar, Sharadha and Nordin, Jessika and Roy, Ananya and Christmas, Matthew J. and Marinescu, Voichita D. and Wang, Chao and Wallerman, Ola and Xue, James and Yao, Shuyang and Sun, Quan and Szatkiewicz, Jin and Wen, Jia and Huckins, Laura M. and Lawler, Alyssa and Keough, Kathleen C. and Zheng, Zhili and Zeng, Jian and Wray, Naomi R. and Li, Yun and Johnson, Jessica and Chen, Jiawen and ,  and Paten, Benedict and Reilly, Steven K. and Hughes, Graham M. and Weng, Zhiping and Pollard, Katherine S. and Pfenning, Andreas R. and Forsberg-Nilsson, Karin and Karlsson, Elinor K. and Lindblad-Toh, Kerstin and Andrews, Gregory and Armstrong, Joel C. and Bianchi, Matteo and Birren, Bruce W. and Bredemeyer, Kevin R. and Breit, Ana M. and Christmas, Matthew J. and Clawson, Hiram and Damas, Joana and Di Palma, Federica and Diekhans, Mark and Dong, Michael X. and Eizirik, Eduardo and Fan, Kaili and Fanter, Cornelia and Foley, Nicole M. and Forsberg-Nilsson, Karin and Garcia, Carlos J. and Gatesy, John and Gazal, Steven and Genereux, Diane P. and Goodman, Linda and Grimshaw, Jenna and Halsey, Michaela K. and Harris, Andrew J. and Hickey, Glenn and Hiller, Michael and Hindle, Allyson G. and Hubley, Robert M. and Hughes, Graham M. and Johnson, Jeremy and Juan, David and Kaplow, Irene M. and Karlsson, Elinor K. and Keough, Kathleen C. and Kirilenko, Bogdan and Koepfli, Klaus-Peter and Korstian, Jennifer M. and Kowalczyk, Amanda and Kozyrev, Sergey V. and Lawler, Alyssa J. and Lawless, Colleen and Lehmann, Thomas and Levesque, Danielle L. and Lewin, Harris A. and Li, Xue and Lind, Abigail and Lindblad-Toh, Kerstin and Mackay-Smith, Ava and Marinescu, Voichita D. and Marques-Bonet, Tomas and Mason, Victor C. and Meadows, Jennifer R. S. and Meyer, Wynn K. and Moore, Jill E. and Moreira, Lucas R. and Moreno-Santillan, Diana D. and Morrill, Kathleen M. and {Muntané}, Gerard and Murphy, William J. and Navarro, Arcadi and Nweeia, Martin and Ortmann, Sylvia and Osmanski, Austin and Paten, Benedict and Paulat, Nicole S. and Pfenning, Andreas R. and Phan, BaDoi N. and Pollard, Katherine S. and Pratt, Henry E. and Ray, David A. and Reilly, Steven K. and Rosen, Jeb R. and Ruf, Irina and Ryan, Louise and Ryder, Oliver A. and Sabeti, Pardis C. and {Schäffer}, Daniel E. and Serres, Aitor and Shapiro, Beth and Smit, Arian F. A. and Springer, Mark and Srinivasan, Chaitanya and Steiner, Cynthia and Storer, Jessica M. and Sullivan, Kevin A. M. and Sullivan, Patrick F. and {Sundström}, Elisabeth and Supple, Megan A. and Swofford, Ross and Talbot, Joy-El and Teeling, Emma and Turner-Maier, Jason and Valenzuela, Alejandro and Wagner, Franziska and Wallerman, Ola and Wang, Chao and Wang, Juehan and Weng, Zhiping and Wilder, Aryn P. and Wirthlin, Morgan E. and Xue, James R. and Zhang, Xiaomeng},
+	year = {2023},
+	month = {04},
+	date = {2023-04-28},
+	journal = {Science},
+	volume = {380},
+	number = {6643},
+	doi = {10.1126/science.abn2937},
+	url = {http://dx.doi.org/10.1126/science.abn2937},
+	langid = {en}
+}
