--- a/references.bib
+++ b/references.bib
@@ -154,3 +154,12 @@
 	url = {http://dx.doi.org/10.1126/science.abn2937},
 	langid = {en}
 }
+
+@article{nguyen2023,
+	title = {HyenaDNA: Long-Range Genomic Sequence Modeling at Single Nucleotide Resolution},
+	author = {Nguyen, Eric and Poli, Michael and Faizi, Marjan and Thomas, Armin and Birch-Sykes, Callum and Wornow, Michael and Patel, Aman and Rabideau, Clayton and Massaroli, Stefano and Bengio, Yoshua and Ermon, Stefano and Baccus, Stephen A. and {Ré}, Chris},
+	year = {2023},
+	date = {2023},
+	doi = {10.48550/ARXIV.2306.15794},
+	url = {https://arxiv.org/abs/2306.15794}
+}
